--- a/task-manager-backend/Dockerfile
+++ b/task-manager-backend/Dockerfile
@@ -1,25 +1,12 @@
-FROM maven:3.8.6-openjdk-17-slim AS build
-
+# Use Maven to build the app
+FROM maven:3.8.4-openjdk-17 AS build
 WORKDIR /app
-
-# Copy pom.xml and download dependencies
-COPY pom.xml .
-RUN mvn dependency:go-offline -B
-
-# Copy source code and build
-COPY src ./src
+COPY . .
 RUN mvn clean package -DskipTests
 
-# Runtime stage
-FROM openjdk:17-jdk-slim
-
+# Use OpenJDK to run the app
+FROM openjdk:17-jdk-alpine
 WORKDIR /app
-
-# Copy the built jar from build stage
 COPY --from=build /app/target/*.jar app.jar
-
-# Expose port
 EXPOSE 8080
-
-# Run the application
-CMD ["java", "-Dspring.profiles.active=prod", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
