fix: Remove circular spring.profiles.active reference
- Remove spring.profiles.active from application-prod.yml to prevent circular reference
- Set profile activation in Dockerfile using JVM argument
- Fix InvalidConfigDataPropertyException in Spring Boot deployment
- Update CORS configuration for production

--- a/task-manager-backend/src/main/resources/application-prod.yml
+++ b/task-manager-backend/src/main/resources/application-prod.yml
@@ -12,8 +12,5 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     show-sql: false
 
-  profiles:
-    active: prod
-
 cors:
-  allowed-origins: ${FRONTEND_URL:http://localhost:3000}
+  allowed-origins: ${FRONTEND_URL:https://your-frontend.onrender.com}
