--- a/task-manager-backend/src/main/resources/application-prod.yml
+++ b/task-manager-backend/src/main/resources/application-prod.yml
@@ -3,13 +3,12 @@ server:
 
 spring:
   datasource:
-    url: ${DATABASE_URL}
+    url: ${JDBC_DATABASE_URL:${DATABASE_URL}}
     driver-class-name: org.postgresql.Driver
   
   jpa:
     hibernate:
       ddl-auto: update
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
     show-sql: false
 
 cors:
