--- a/task-manager-backend/src/main/resources/application-prod.yml
+++ b/task-manager-backend/src/main/resources/application-prod.yml
@@ -3,13 +3,31 @@ server:
 
 spring:
   datasource:
-    url: ${JDBC_DATABASE_URL:${DATABASE_URL}}
+    url: ${DATABASE_URL:jdbc:postgresql://localhost:5432/taskmanager}
     driver-class-name: org.postgresql.Driver
+    hikari:
+      connection-timeout: 20000
+      maximum-pool-size: 5
   
   jpa:
     hibernate:
       ddl-auto: update
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
     show-sql: false
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
+        jdbc:
+          lob:
+            non_contextual_creation: true
+        temp:
+          use_jdbc_metadata_defaults: false
 
 cors:
   allowed-origins: ${FRONTEND_URL:https://your-frontend.onrender.com}
+
+logging:
+  level:
+    org.springframework.boot.autoconfigure: DEBUG
+    org.hibernate.SQL: DEBUG
